Fix sections spacing

--- a/bootstrap/less/custom.less
+++ b/bootstrap/less/custom.less
@@ -419,7 +419,7 @@ nav.navbar-default {
             font-size: 1.3em;
             font-style: italic;
             padding-left: 1.3em;
-            margin-bottom: -1.7em;
+            margin-bottom: -20px;
             background-image: url('section.png');
             background-repeat: no-repeat;
             background-position: left top;
